--- a/PrograWeb-U2-Pracitcas/Actividad3-Pixar/Views/Home/Cortos.cshtml
+++ b/PrograWeb-U2-Pracitcas/Actividad3-Pixar/Views/Home/Cortos.cshtml
@@ -3,32 +3,14 @@
     Layout = "_Layout";
 }
 
-<header>
-    <nav class="menuHorizontal">
-        <a href="~/Home/Index">
-            <img id="logo" src="~/images/Disney_pixar.png">
-        </a>
-        <ul>
-            <li>
-                <a href="~/Home/Index">Inicio</a>
-            </li>
-            <li >
-                <a href="~/peliculas">Películas</a>
-            </li>
 
-            <li class="selected">
-                <a href="~/cortos">Cortometrajes</a>
-            </li>
-        </ul>
-    </nav>
-</header>
-<main>
+
     <div id="principalPeliculas">
         <div id="pelis">
             @foreach (var cat in Model.Categoria)
         {
             <h1>@cat.Nombre</h1>
-            @foreach (var c in cat.Cortometraje)
+            @foreach (var c in cat.Cortometraje.OrderBy(x=>x.Nombre))
             {
                 <div>
                     <a class="imgPelicula" href="~/cortos/@c.Nombre.Replace(" ", "-")">
@@ -46,6 +28,6 @@
 
         </div>
     </div>
-</main>
+
 
 
